--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-size": "^1.3.5",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "remixicon": "^2.5.0",
     "sass": "^1.54.9",
     "web-vitals": "^2.1.4"
   },
